# colander

./: .coveragerc  .flake8  .gitignore  .hgignore  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  COPYRIGHT.txt  LICENSE.txt  MANIFEST.in  Makefile.packaging  README.rst  README.txt  RELEASING.txt  TODO.txt  contributing.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-tests.yml  ci-windows.yml
cereal/: __init__.py  interfaces.py  tests.py
colander/: __init__.py  compat.py  interfaces.py  iso8601.py  polymorphism.py  tests.py
colander/iso8601/: __init__.py  iso8601.py
colander/locale/: colander.pot
colander/locale/cs/LC_MESSAGES/: colander.mo  colander.po
colander/locale/de/LC_MESSAGES/: colander.mo  colander.po
colander/locale/de_DE/LC_MESSAGES/: colander.mo  colander.po
colander/locale/el/LC_MESSAGES/: colander.mo
colander/locale/es/LC_MESSAGES/: colander.mo  colander.po
colander/locale/fi/LC_MESSAGES/: colander.mo
colander/locale/fr/LC_MESSAGES/: colander.mo  colander.po
colander/locale/it/LC_MESSAGES/: colander.mo  colander.po
colander/locale/ja/LC_MESSAGES/: colander.mo  colander.po
colander/locale/nl/LC_MESSAGES/: colander.mo  colander.po
colander/locale/pl/LC_MESSAGES/: colander.mo  colander.po
colander/locale/pt/LC_MESSAGES/: colander.mo  colander.po
colander/locale/pt_BR/LC_MESSAGES/: colander.mo  colander.po
colander/locale/ro/LC_MESSAGES/: colander.mo
colander/locale/ru/LC_MESSAGES/: colander.mo  colander.po
colander/locale/sv/LC_MESSAGES/: colander.mo  colander.po
colander/locale/tx/LC_MESSAGES/: colander.mo  colander.po
colander/locale/zh/LC_MESSAGES/: colander.mo  colander.po
colander/locale/zh_Hans/LC_MESSAGES/: colander.mo
colander/locale/zh_Hant/LC_MESSAGES/: colander.mo  colander.po
colander/tests/: test_colander.py  test_interfaces.py  test_iso8601.py  test_polymorphism.py
debian/: changelog  control  copyright  files  rules.pysupport
docs/: .gitignore  Makefile  api.rst  basics.rst  binding.rst  changes.rst  conf.py  defaults.rst  extending.rst  glossary.rst  index.rst  interfaces.rst  manipulation.rst  null.rst  null_and_drop.rst
docs/.static/: repoze.css
src/colander/: __init__.py  compat.py  interfaces.py
src/colander/locale/: colander.pot
src/colander/locale/cs/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/de/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/el/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/es/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/fi/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/fr/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/it/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/ja/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/nl/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/pl/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/pt/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/pt_BR/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/ro/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/ru/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/sv/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/zh_Hans/LC_MESSAGES/: colander.mo  colander.po
src/colander/locale/zh_Hant/LC_MESSAGES/: colander.mo  colander.po
tests/: relative.py  test_colander.py
