[bdist_wheel]
universal = 1

[easy_install]
zip_ok = false

[nosetests]
match=^test
where=colander
nocapture=1
cover-package=colander
cover-erase=1

[aliases]
dev = develop easy_install colander[testing]
docs = develop easy_install colander[docs]

[metadata]
license_file = LICENSE.txt

[check-manifest]
ignore =
    .gitignore
    .hgignore
    .flake8
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    colander/locale/*

[compile_catalog]
directory = colander/locale
domain = colander
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = colander/locale/colander.pot
width = 80

[init_catalog]
domain = colander
input_file = colander/locale/colander.pot
output_dir = colander/locale

[update_catalog]
domain = colander
input_file = colander/locale/colander.pot
output_dir = colander/locale
previous = true
