[metadata]
name = colander
version = 1.7.0
description = A simple schema-based serialization and deserialization library
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst
keywords = serialize deserialize validate schema validation
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
license_file = LICENSE.txt
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: Repoze Public License
url = https://github.com/Pylons/colander
project_urls =
    Documentation = https://docs.pylonsproject.org/projects/colander/en/latest/index.html
    Changelog = https://docs.pylonsproject.org/projects/colander/en/latest/changes.html
    Issue Tracker = https://github.com/Pylons/colander/issues
author = Agendaless Consulting
author_email = pylons-discuss@googlegroups.com
maintainer = Pylons Project
maintainer_email = pylons-discuss@googlegroups.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    translationstring
    iso8601
    enum34; python_version in "2.7"
    setuptools >= 11.3  # pkg_resources.EntryPoint.resolve()

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage>=5.0

docs =
    Sphinx>=1.8.1
    docutils
    pylons-sphinx-themes>=1.0.9

[bdist_wheel]
universal = 1

[tool:pytest]
python_files = test_*.py
# For the benefit of test_wasyncore.py
python_classes = Test_*
testpaths =
    tests
addopts = -W always --cov --cov-report=term-missing

[check-manifest]
ignore-bad-ideas =
    src/colander/locale/**/*

[compile_catalog]
directory = colander/locale
domain = colander
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = colander/locale/colander.pot
width = 80

[init_catalog]
domain = colander
input_file = colander/locale/colander.pot
output_dir = colander/locale

[update_catalog]
domain = colander
input_file = colander/locale/colander.pot
output_dir = colander/locale
previous = true
