[metadata]
name = colander
version = 2.0
description = A simple schema-based serialization and deserialization library
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = serialize deserialize validate schema validation
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: Repoze Public License
url = https://github.com/Pylons/colander
project_urls =
    Documentation = https://docs.pylonsproject.org/projects/colander/en/latest/index.html
    Changelog = https://docs.pylonsproject.org/projects/colander/en/latest/changes.html
    Issue Tracker = https://github.com/Pylons/colander/issues
author = Agendaless Consulting
author_email = pylons-discuss@googlegroups.com
maintainer = Pylons Project
maintainer_email = pylons-discuss@googlegroups.com

[options]
package_dir=
    =src
packages=find_namespace:
include_package_data = True
python_requires = >=3.7
install_requires =
    translationstring
    iso8601

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage>=5.0
    babel

docs =
    Sphinx>=1.8.1
    docutils
    pylons-sphinx-themes>=1.0.9
    setuptools

[check-manifest]
ignore-bad-ideas =
    src/colander/locale/**/*.mo

[compile_catalog]
directory = src/colander/locale
domain = colander
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
input_paths = src/colander
output_file = src/colander/locale/colander.pot
width = 80

[init_catalog]
domain = colander
input_file = src/colander/locale/colander.pot
output_dir = src/colander/locale

[update_catalog]
domain = colander
input_file = src/colander/locale/colander.pot
output_dir = src/colander/locale
previous = true
